--- a/dates.html
+++ b/dates.html
@@ -11,10 +11,10 @@
 		</div>
 		<div class="header-right">
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="list.html">Programme List</a></li>
 				<li><a href="form.html">Registration</a></li>
-				<li><a href="dates.html">Important Dates</a></li>
+				<li class="active"><a href="dates.html">Important Dates</a></li>
 			</ul>
 		</div>
 	</header>
