--- a/list.html
+++ b/list.html
@@ -11,8 +11,8 @@
 		</div>
 		<div class="header-right">
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="list.html">Programme List</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="list.html">Programme List</a></li>
 				<li><a href="form.html">Registration</a></li>
 				<li><a href="dates.html">Important Dates</a></li>
 			</ul>
