--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<div class="header-left">
-			<a href="index.html"></a><img src="logo.png">
+			<a href="index.html"><img src="logo.png"></a>
 		</div>
 		<div class="header-right">
 			<ul>
