--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
 		</div>
 	</header>
 	<!-- Main Body Starts Here-->
-	<div>
-		gdfhdfghd
+	<div class="heading-main">
+		<h1><u>Welcome to University Website</u></h1>
 	</div>
+	<div class="main-body">
+		<p>
+			<i>
+				This University was established in 2020 for the sole purpose of imparting knowledge to the students during the study from home scenario.
+			</i>
+		</p>
+		<p>
+			<i>
+				We have made ourselves the leader in distance courses but also providing enough infrastructure for students to be able to cope with the studies and also be able to compete with the students of other universities that have regular classes.
+			</i>
+		</p>
+	</div>
+	
 </body>
 </html>
