Added active effect and contact

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 			</i>
 		</p>
 	</div>
-	
+	<div class="contact">
+		<p>
+			For more details please contact our office at <a>1800 690 4200</a>
+		</p>
+	</div>
 </body>
 </html>
