more data input

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 			For more details please contact our office at <a>1800 690 4200</a>
 		</p>
 	</div>
+	<!--Main Body Ends Here-->
 </body>
 </html>
