--- a/dates.html
+++ b/dates.html
@@ -18,5 +18,27 @@
 			</ul>
 		</div>
 	</header>
+	<!-- Main Body Starts Here-->
+	<div class="heading-main">
+		<h1><u>Important Dates</u></h1>
+	</div>
+	<div class="main-body">
+		<p>
+			<i>
+				This University was established in 2020 for the sole purpose of imparting knowledge to the students during the study from home scenario.
+			</i>
+		</p>
+		<p>
+			<i>
+				We have made ourselves the leader in distance courses but also providing enough infrastructure for students to be able to cope with the studies and also be able to compete with the students of other universities that have regular classes.
+			</i>
+		</p>
+	</div>
+	<div class="contact">
+		<p>
+			For more details please contact our office at <a>1800 690 4200</a>
+		</p>
+	</div>
+	<!--Main Body Ends Here-->
 </body>
 </html>
