programme list made

--- a/form.html
+++ b/form.html
@@ -4,15 +4,11 @@
 	<title>University Website</title>
 	<link rel="stylesheet" href="style.css">
 	<style>
-		 .container *
-		{
-			box-sizing: border-box;
-		}
 		input[type=text], select, textarea 
 		{
 			width: 100%;
 			padding: 12px;
-			border: 1px solid #ccc;
+			border: 1px solid white;
 			border-radius: 4px;
 			resize: vertical;
 		}
@@ -20,7 +16,7 @@
 		{
 			width: 100%;
 			padding: 12px;
-			border: 1px solid #ccc;
+			border: 1px solid white;
 			border-radius: 4px;
 			resize: vertical;
 		}		
@@ -31,7 +27,7 @@
 		}		
 		button 
 		{
-			background-color: #04AA6D;
+			background-color: green;
 			color: white;
 			padding: 12px 20px;
 			border: none;
@@ -41,32 +37,7 @@
 		}		
 		button:hover 
 		{
-			background-color: #45a049;
-		}		
-		.container 
-		{
-			border-radius: 5px;
-			background-color: #f2f2f2;
-			padding: 20px 100px;
-			margin: 0 50px;
-		}		
-		.col-25 
-		{
-			float: left;
-			width: 25%;
-			margin-top: 6px;
-		}		
-		.col-50 
-		{
-			float: left;
-			width: 50%;
-			margin-top: 6px;
-		}
-		.row:after 
-		{
-			content: "";
-			display: table;
-			clear: both;
+			background-color: darkgreen;
 		}
 		.col-25 p
 		{
