--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</p>
 		<p>
 			<i>
-				We have made ourselves the leader in distance courses but also providing enough infrastructure for students to be able to cope with the studies and also be able to compete with the students of other universities that have regular classes.
+				We have made ourselves the leaders in distance courses but also providing enough infrastructure for students to be able to cope with the studies and be able to compete with the students of other universities that have regular classes.
 			</i>
 		</p>
 	</div>
