--- a/list.html
+++ b/list.html
@@ -3,6 +3,22 @@
 <head>
 	<title>University Website</title>
 	<link rel="stylesheet" href="style.css">
+	<style>
+		.table
+		{
+			border: 1px gray groove;
+			text-align: center;
+			padding: 10px 20px;
+		}
+		.row
+		{
+			border-bottom: 1px gray groove;
+		}
+		.container
+		{
+			padding: 20px 50px;
+		}
+	</style>
 </head>
 <body>
 	<header>
@@ -22,17 +38,171 @@
 	<div class="heading-main">
 		<h1><u>Our Programmes</u></h1>
 	</div>
-	<div class="main-body">
-		<p>
-			<i>
-				This University was established in 2020 for the sole purpose of imparting knowledge to the students during the study from home scenario.
-			</i>
-		</p>
-		<p>
-			<i>
-				We have made ourselves the leader in distance courses but also providing enough infrastructure for students to be able to cope with the studies and also be able to compete with the students of other universities that have regular classes.
-			</i>
-		</p>
+	<div class="container">
+		<div class="table">
+			<div class="row">
+				<div class="col-10">
+					<h3>Programme Code</h3>
+				</div>
+				<div class="col-25">
+					<h3>Programme Name</h3>
+				</div>
+				
+				<div class="col-10">
+					<h3>Duration</h3>
+				</div>
+				<div class="col-10">
+					<h3>Medium of Instruction</h3>
+				</div>	
+				<div class="col-25">
+					<h3>Eligibility Criteria</h3>
+				</div>
+				<div class="col-20">
+					<h3>Total Fees</h3>
+				</div>		
+			</div>
+			<div class="row">
+				<div class="col-10">
+					<p>BCA</p>
+				</div>
+				<div class="col-25">
+					<p>Bachelors in Computer Applications</p>
+				</div>					
+				<div class="col-10">
+					<p>3 Years</p>
+				</div>
+				<div class="col-10">
+					<p>English</p>
+				</div>	
+				<div class="col-25">
+					<p>Atleast 60% in Computer Science in Class 12 or equivalent</p>
+					<p><b>AND</b></p>
+					<p>Atleast 50% in Mathematics in Class 12 or equivalent</p>
+				</div>
+				<div class="col-20">
+					<p>Semester-wise Fees</p>
+					<p>1st Semester - Rs. 7,000</p>
+					<p>2nd Semester - Rs. 7,000</p>
+					<p>3rd Semester - Rs. 6,000</p>
+					<p>4th Semester - Rs. 6,000</p>
+					<p>5th Semester - Rs. 5,000</p>
+					<p>6th Semester - Rs. 5,000</p>
+					<p><b>Total Fees - Rs. 36,000</b></p>				
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-10">
+					<p>BA</p>
+				</div>
+				<div class="col-25">
+					<p>Bachelors in Arts</p>
+				</div>					
+				<div class="col-10">
+					<p>3 Years</p>
+				</div>
+				<div class="col-10">
+					<p>English</p>
+				</div>	
+				<div class="col-25">
+					<p>Atleast 40% in Class 12 or equivalent</p>
+				</div>
+				<div class="col-20">
+					<p>Semester-wise Fees</p>
+					<p>1st Semester - Rs. 5,000</p>
+					<p>2nd Semester - Rs. 5,000</p>
+					<p>3rd Semester - Rs. 4,000</p>
+					<p>4th Semester - Rs. 4,000</p>
+					<p>5th Semester - Rs. 3,000</p>
+					<p>6th Semester - Rs. 3,000</p>
+					<p><b>Total Fees - Rs. 24,000</b></p>				
+				</div>						
+			</div>
+			<div class="row">
+				<div class="col-10">
+					<p>BSC</p>
+				</div>
+				<div class="col-25">
+					<p>Bachelors in Science</p>
+				</div>					
+				<div class="col-10">
+					<p>3 Years</p>
+				</div>
+				<div class="col-10">
+					<p>English</p>
+				</div>	
+				<div class="col-25">
+					<p>Atleast 60% in Physics and Chemistry in Class 12 or equivalent</p>
+					<p><b>AND</b></p>
+					<p>Atleast 50% in Mathematics in Class 12 or equivalent</p>
+				</div>
+				<div class="col-20">
+					<p>Semester-wise Fees</p>
+					<p>1st Semester - Rs. 5,000</p>
+					<p>2nd Semester - Rs. 5,000</p>
+					<p>3rd Semester - Rs. 5,000</p>
+					<p>4th Semester - Rs. 5,000</p>
+					<p>5th Semester - Rs. 4,000</p>
+					<p>6th Semester - Rs. 4,000</p>
+					<p><b>Total Fees - Rs. 28,000</b></p>				
+				</div>						
+			</div>
+			<div class="row">
+				<div class="col-10">
+					<p>BBA</p>
+				</div>
+				<div class="col-25">
+					<p>Bachelors in Business Administration</p>
+				</div>					
+				<div class="col-10">
+					<p>3 Years</p>
+				</div>
+				<div class="col-10">
+					<p>English</p>
+				</div>	
+				<div class="col-25">
+					<p>Atleast 50% in Class 12 or equivalent</p>
+				</div>
+				<div class="col-20">
+					<p>Semester-wise Fees</p>
+					<p>1st Semester - Rs. 10,000</p>
+					<p>2nd Semester - Rs. 10,000</p>
+					<p>3rd Semester - Rs. 8,000</p>
+					<p>4th Semester - Rs. 8,000</p>
+					<p>5th Semester - Rs. 7,000</p>
+					<p>6th Semester - Rs. 7,000</p>
+					<p><b>Total Fees - Rs. 50,000</b></p>				
+				</div>						
+			</div>
+			<div class="row" style="border: none;">
+				<div class="col-10">
+					<p>BCOM</p>
+				</div>
+				<div class="col-25">
+					<p>Bachelors in Commerce</p>
+				</div>					
+				<div class="col-10">
+					<p>3 Years</p>
+				</div>
+				<div class="col-10">
+					<p>English</p>
+				</div>	
+				<div class="col-25">
+					<p>Atleast 60% in Commerce/Accounts or related subject in Class 12 or equivalent</p>
+					<p><b>AND</b></p>
+					<p>Atleast 40% in Class 12 or equivalent</p>
+				</div>
+				<div class="col-20">
+					<p>Semester-wise Fees</p>
+					<p>1st Semester - Rs. 5,000</p>
+					<p>2nd Semester - Rs. 5,000</p>
+					<p>3rd Semester - Rs. 4,000</p>
+					<p>4th Semester - Rs. 4,000</p>
+					<p>5th Semester - Rs. 3,000</p>
+					<p>6th Semester - Rs. 3,000</p>
+					<p><b>Total Fees - Rs. 24,000</b></p>				
+				</div>						
+			</div>
+		</div>
 	</div>
 	<div class="contact">
 		<p>
