--- a/dates.html
+++ b/dates.html
@@ -3,6 +3,12 @@
 <head>
 	<title>University Website</title>
 	<link rel="stylesheet" href="style.css">
+	<style>
+		.container
+		{
+			padding: 20px 50px;
+		}
+	</style>
 </head>
 <body>
 	<header>
@@ -22,17 +28,27 @@
 	<div class="heading-main">
 		<h1><u>Important Dates</u></h1>
 	</div>
-	<div class="main-body">
-		<p>
-			<i>
-				This University was established in 2020 for the sole purpose of imparting knowledge to the students during the study from home scenario.
-			</i>
-		</p>
-		<p>
-			<i>
-				We have made ourselves the leader in distance courses but also providing enough infrastructure for students to be able to cope with the studies and also be able to compete with the students of other universities that have regular classes.
-			</i>
-		</p>
+	<div class="container">
+		<ul>
+			<li>
+				<b>Opening of the Online Admission Portal</b>  -  1st May 2021 - 12 P.M.
+			</li>
+			<li>
+				<b>Last Date of Online Admission Application</b>  -  15th June 2021 - 12 P.M.
+			</li>
+			<li>
+				<b>Publication of Merit List</b>  -  20th June 2021 - 3 P.M.
+			</li>
+			<li>
+				<b>Admission Councelling Starts</b>  -  21st June 2021 - 10 A.M.
+			</li>
+			<li>
+				<b>Admission Councelling Ends</b>  -  25th June 2021 - 3 P.M.
+			</li>
+			<li>
+				<b>Class Commences</b>  -  1st July 2021 - 10 A.M.
+			</li>
+		</ul>
 	</div>
 	<div class="contact">
 		<p>
